yamls/node-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: zyxxyz/kubia
        # readinessProbe: # create file at image /var/ready to make new created pod become ready
        #   exec:
        #     command:
        #       - ls
        #       - /var/ready
        ports:
        - containerPort: 8080
