yamls/node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node
spec:
  rules:
    - host: node.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: node-nodeport
              servicePort: 8989
